@@ -1,5 +1,5 @@
 #!@PERL@
-# $Id: w3mhelp.cgi.in,v 1.9 2001/12/25 17:29:31 ukai Exp $
+# $Id: w3mhelp.cgi.in,v 1.10 2002/01/10 03:45:13 ukai Exp $
 
 if ( $^O =~ /^(ms)?(dos|win(32|nt)?)/i ) {
   $CYGPATH = 1;
@@ -187,7 +187,8 @@ sub load_keymap {
 sub norm_key {
     local($_) = @_;
 
-    s/^\^/C-/;
+    s/\\(.)/$1/g;
+    s/^\^(.)/C-$1/;
     s/^(C-\[|M-)/ESC-/;
     if (/^ESC-\[/) {
 	/^ESC-\[A$/ && return "UP";
@@ -197,10 +198,9 @@ sub norm_key {
 	s/^ESC-/\^\[/;
 	return $_;
     }
-    s/^(ESC-)\^/ESC-C-/;
+    s/^ESC-\^(.)/ESC-C-$1/;
     s/^(ESC-)?C-[iI]/${1}TAB/;
     s/^(ESC-)?C-\?/${1}DEL/;
-    s/^\\//;
     return $_;
 }
 
